[package]
name = "chvt"
version = "0.1.0"
authors = ["Jonathan Donszelmann <jonabent@gmail.com>"]
edition = "2018"
license = "GPL"
description = "changes tty programatically in rust-ish (only works as root) "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2.65"
