[package]
name = "chvt"
version = "0.1.1"
authors = ["Jonathan Donszelmann <jonabent@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "changes tty programatically in rust-ish (only works as root) "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2.65"
