[package]
name = "chvt"
version = "0.1.3"
authors = ["Jonathan Donszelmann <jonabent@gmail.com>", "Victor Roest <victor@xirion.net>"]
edition = "2018"
license = "GPL-3.0"
description = "changes tty programatically in Rust"
repository = "https://github.com/jonay2000/chvt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc="0.2.65"
nix="0.15.0"